iphone cutoff fix 3

--- a/profile.css
+++ b/profile.css
@@ -32,7 +32,7 @@ body {
 
 #container {
     max-width: 800px;
-    padding: 5%;
+    padding: 8%;
     padding-bottom: 180px;
 }
 
